--- a/GreenHouse/GreenHouse.csproj
+++ b/GreenHouse/GreenHouse.csproj
@@ -11,11 +11,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.6.0.1141" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
+    <PackageReference Include="Microcharts" Version="0.9.5.9" />
+    <PackageReference Include="Microcharts.Forms" Version="0.9.5.9" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="System.Text.Json" Version="5.0.2" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2083" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="DeviceGraphs.xaml.cs">
+      <DependentUpon>DeviceGraphs.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Navigate.xaml.cs">
       <DependentUpon>Navigate.xaml</DependentUpon>
     </Compile>
