Customised_UI_Updates

--- a/GreenHouse.Android/GreenHouse.Android.csproj
+++ b/GreenHouse.Android/GreenHouse.Android.csproj
@@ -61,8 +61,11 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SplashActivity.cs" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidAsset Include="Assets\74930-eco-home.json" />
+    <AndroidAsset Include="Assets\67533-harold-wink.json" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
@@ -86,13 +89,21 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Resources\drawable\" />
+    <AndroidResource Include="Resources\drawable\greenhouse.jpg" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GreenHouse\GreenHouse.csproj">
       <Project>{51647A53-3511-4CDE-B159-31DB9B044CC7}</Project>
       <Name>GreenHouse</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\Activity_Splash.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\harold.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
