--- a/GreenHouse.Android/GreenHouse.Android.csproj
+++ b/GreenHouse.Android/GreenHouse.Android.csproj
@@ -109,6 +109,9 @@
   <ItemGroup>
     <AndroidAsset Include="Assets\harold.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\logo.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
